--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -57,6 +57,7 @@ single_version_override(
     version = "1.3.1",
 )
 
+bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")
 bazel_dep(name = "bazel_skylib", version = "1.7.1")
 bazel_dep(name = "rules_pkg", version = "1.0.1")
 bazel_dep(name = "rules_oci", version = "2.2.0")
