cloud/agent/api: Unmark MESSAGE_PASCAL_CASE rule exception as todo
Currently we cannot mark exemptions on a per-line basis. This is tracked by rules-proto-grpc/rules_proto_grpc#398

Change-Id: Ie9ece6539b69edccf1b6b4078977e65e7ffb0b01
Reviewed-on: https://review.monogon.dev/c/monogon/+/3803
Reviewed-by: Leopold Schabel <leo@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/agent/api/BUILD.bazel
+++ b/cloud/agent/api/BUILD.bazel
@@ -7,9 +7,9 @@ buf_proto_lint_test(
     name = "api_proto_lint_test",
     except_rules = [
         "PACKAGE_VERSION_SUFFIX",
+        "MESSAGE_PASCAL_CASE",
         "ENUM_VALUE_PREFIX",  # TODO: evaluate correctness
         "ENUM_ZERO_VALUE_SUFFIX",  # TODO: evaluate correctness
-        "MESSAGE_PASCAL_CASE",  # TODO: evaluate correctness
     ],
     protos = [":api_proto"],
     use_rules = [
