--- a/metropolis/node/core/curator/proto/private/BUILD.bazel
+++ b/metropolis/node/core/curator/proto/private/BUILD.bazel
@@ -7,7 +7,7 @@ buf_proto_lint_test(
     name = "private_proto_lint_test",
     except_rules = [
         "PACKAGE_VERSION_SUFFIX",
-        "ENUM_ZERO_VALUE_SUFFIX",  # TODO: evaluate correctness
+        "ENUM_ZERO_VALUE_SUFFIX",
     ],
     protos = [":private_proto"],
     use_rules = [
