treewide: Unmark ENUM_ZERO_VALUE_SUFFIX rule exception as todo
We don't really have a policy for these, they are chosen arbitrarily.

Change-Id: I705ad309c2a36d794665de2482441858850a1893
Reviewed-on: https://review.monogon.dev/c/monogon/+/3805
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI

--- a/metropolis/proto/api/BUILD.bazel
+++ b/metropolis/proto/api/BUILD.bazel
@@ -7,8 +7,8 @@ buf_proto_lint_test(
     name = "api_proto_lint_test",
     except_rules = [
         "PACKAGE_VERSION_SUFFIX",
+        "ENUM_ZERO_VALUE_SUFFIX",
         "RPC_REQUEST_RESPONSE_UNIQUE",  # TODO: evaluate correctness
-        "ENUM_ZERO_VALUE_SUFFIX",  # TODO: evaluate correctness
         "RPC_REQUEST_STANDARD_NAME",  # TODO: evaluate correctness
         "RPC_RESPONSE_STANDARD_NAME",  # TODO: evaluate correctness
         "SERVICE_SUFFIX",  # TODO: evaluate correctness
