--- a/metropolis/proto/common/BUILD.bazel
+++ b/metropolis/proto/common/BUILD.bazel
@@ -7,7 +7,7 @@ buf_proto_lint_test(
     name = "common_proto_lint_test",
     except_rules = [
         "PACKAGE_VERSION_SUFFIX",
-        "ENUM_ZERO_VALUE_SUFFIX",  # TODO: evaluate correctness
+        "ENUM_ZERO_VALUE_SUFFIX",
     ],
     protos = [":common_proto"],
     use_rules = [
