--- a/cloud/agent/api/BUILD.bazel
+++ b/cloud/agent/api/BUILD.bazel
@@ -8,7 +8,7 @@ buf_proto_lint_test(
     except_rules = [
         "PACKAGE_VERSION_SUFFIX",
         "MESSAGE_PASCAL_CASE",
-        "ENUM_ZERO_VALUE_SUFFIX",  # TODO: evaluate correctness
+        "ENUM_ZERO_VALUE_SUFFIX",
     ],
     protos = [":api_proto"],
     use_rules = [
