--- a/osbase/net/proto/BUILD.bazel
+++ b/osbase/net/proto/BUILD.bazel
@@ -7,7 +7,7 @@ buf_proto_lint_test(
     name = "proto_proto_lint_test",
     except_rules = [
         "PACKAGE_VERSION_SUFFIX",
-        "ENUM_ZERO_VALUE_SUFFIX",  # TODO: evaluate correctness
+        "ENUM_ZERO_VALUE_SUFFIX",
     ],
     protos = [":proto_proto"],
     use_rules = [
