--- a/metropolis/node/core/network/BUILD.bazel
+++ b/metropolis/node/core/network/BUILD.bazel
@@ -13,6 +13,7 @@ go_library(
     deps = [
         "//go/algorithm/toposort",
         "//go/logging",
+        "//metropolis/node",
         "//metropolis/node/core/network/dhcp4c",
         "//metropolis/node/core/network/dhcp4c/callback",
         "//osbase/event/memory",
@@ -22,6 +23,7 @@ go_library(
         "//osbase/supervisor",
         "//osbase/sysctl",
         "@com_github_google_nftables//:nftables",
+        "@com_github_google_nftables//binaryutil",
         "@com_github_google_nftables//expr",
         "@com_github_insomniacslk_dhcp//dhcpv4",
         "@com_github_mdlayher_arp//:arp",
