--- a/cloud/api/BUILD.bazel
+++ b/cloud/api/BUILD.bazel
@@ -7,7 +7,7 @@ buf_proto_lint_test(
     name = "api_proto_lint_test",
     except_rules = [
         "PACKAGE_VERSION_SUFFIX",
-        "SERVICE_SUFFIX",  # TODO: evaluate correctness
+        "SERVICE_SUFFIX",
     ],
     protos = [":api_proto"],
     use_rules = [
