--- a/cloud/bmaas/server/api/BUILD.bazel
+++ b/cloud/bmaas/server/api/BUILD.bazel
@@ -9,7 +9,7 @@ buf_proto_lint_test(
         "PACKAGE_VERSION_SUFFIX",
         "RPC_REQUEST_STANDARD_NAME",  # TODO: evaluate correctness
         "RPC_RESPONSE_STANDARD_NAME",  # TODO: evaluate correctness
-        "SERVICE_SUFFIX",  # TODO: evaluate correctness
+        "SERVICE_SUFFIX",
     ],
     protos = [":api_proto"],
     use_rules = [
