--- a/metropolis/node/core/curator/proto/api/BUILD.bazel
+++ b/metropolis/node/core/curator/proto/api/BUILD.bazel
@@ -10,7 +10,7 @@ buf_proto_lint_test(
         "ENUM_ZERO_VALUE_SUFFIX",
         "RPC_REQUEST_STANDARD_NAME",  # TODO: evaluate correctness
         "RPC_RESPONSE_STANDARD_NAME",  # TODO: evaluate correctness
-        "SERVICE_SUFFIX",  # TODO: evaluate correctness
+        "SERVICE_SUFFIX",
     ],
     protos = [":api_proto"],
     use_rules = [
