--- a/metropolis/proto/api/BUILD.bazel
+++ b/metropolis/proto/api/BUILD.bazel
@@ -11,7 +11,7 @@ buf_proto_lint_test(
         "RPC_REQUEST_RESPONSE_UNIQUE",  # TODO: evaluate correctness
         "RPC_REQUEST_STANDARD_NAME",  # TODO: evaluate correctness
         "RPC_RESPONSE_STANDARD_NAME",  # TODO: evaluate correctness
-        "SERVICE_SUFFIX",  # TODO: evaluate correctness
+        "SERVICE_SUFFIX",
     ],
     protos = [":api_proto"],
     use_rules = [
