treewide: remove repo_name override for gazelle
We don't need it, let's get rid of it

Change-Id: Ic0d48e21b95bd2fa81024f2b71ae96cbe21cd9d2
Reviewed-on: https://review.monogon.dev/c/monogon/+/3821
Tested-by: Jenkins CI
Reviewed-by: Jan Schär <jan@monogon.tech>

--- a/BUILD.bazel
+++ b/BUILD.bazel
@@ -1,6 +1,6 @@
-load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_test")
 load("@bazeldnf//:def.bzl", "bazeldnf")
 load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
+load("@gazelle//:def.bzl", "gazelle", "gazelle_test")
 load("@rules_multirun//:defs.bzl", "command", "multirun")
 
 exports_files([
