--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -14,7 +14,7 @@ single_version_override(
     module_name = "rules_go",
     patch_strip = 1,
     patches = [
-        "//third_party/go/patches:rules_go_absolute_embedsrc.patch",
+        "//third_party/rules_go:rules_go_absolute_embedsrc.patch",
     ],
     version = "0.52.0",
 )
