--- a/metropolis/node/kubernetes/hyperkube/BUILD.bazel
+++ b/metropolis/node/kubernetes/hyperkube/BUILD.bazel
@@ -1,5 +1,5 @@
-load("@//third_party/go:kubernetes_version_def.bzl", "version_x_defs")
 load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
+load(":kubernetes_version_def.bzl", "version_x_defs")
 
 go_library(
     name = "hyperkube_lib",
