--- a/metropolis/test/launch/cli/launch-cluster/BUILD.bazel
+++ b/metropolis/test/launch/cli/launch-cluster/BUILD.bazel
@@ -4,12 +4,12 @@ go_library(
     name = "launch-cluster_lib",
     srcs = ["main.go"],
     data = [
-        "//metropolis/cli/metroctl",
+        "//metropolis/cli/metroctl:metroctl_lite",
     ],
     importpath = "source.monogon.dev/metropolis/test/launch/cli/launch-cluster",
     visibility = ["//visibility:private"],
     x_defs = {
-        "xMetroctlPath": "$(rlocationpath //metropolis/cli/metroctl )",
+        "xMetroctlPath": "$(rlocationpath //metropolis/cli/metroctl:metroctl_lite )",
     },
     deps = [
         "//metropolis/cli/flagdefs",
