osbase/build: replace label_keyed_string_dict with string_keyed_label_dict
Before bazel 7.4 the string_keyed_label_dict attribute type wasn't available. fsspec_core_impl was using a label_keyed_string_dict which is structurally wrong but there was no alternative for it. This replaces that usage.

Change-Id: I36c02c84e6aa2557cd2beb09c07d3ceca501553d
Reviewed-on: https://review.monogon.dev/c/monogon/+/3853
Reviewed-by: Lorenz Brun <lorenz@monogon.tech>
Tested-by: Jenkins CI

--- a/cloud/agent/takeover/BUILD.bazel
+++ b/cloud/agent/takeover/BUILD.bazel
@@ -50,9 +50,9 @@ static_binary_tarball(
 node_initramfs(
     name = "initramfs",
     files = {
-        "//cloud/agent:agent": "/init",
-        "//osbase/net/dns:resolv.conf": "/etc/resolv.conf",
-        "@cacerts//file": "/etc/ssl/cert.pem",
+        "/init": "//cloud/agent:agent",
+        "/etc/resolv.conf": "//osbase/net/dns:resolv.conf",
+        "/etc/ssl/cert.pem": "@cacerts//file",
     },
     fsspecs = [
         "//osbase/build:earlydev.fsspec",
