treewide: bump go deps and cleanup nogo linter config
This includes a patch for rules_go that is not merged yet, that allows
to run nogo against all external dependencies.

Change-Id: Ie874278d01e94116a2c3898bc98084c961318fd9
Reviewed-on: https://review.monogon.dev/c/monogon/+/3983
Tested-by: Jenkins CI
Reviewed-by: Leopold Schabel <leo@monogon.tech>

--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -15,6 +15,7 @@ single_version_override(
     patch_strip = 1,
     patches = [
         "//third_party/rules_go:rules_go_absolute_embedsrc.patch",
+        "//third_party/rules_go:introduce-all-scope-for-nogo.patch",
     ],
     version = "0.53.0",
 )
